--- a/test/EnumDisplayName.Test/EnumDisplayName.Test.csproj
+++ b/test/EnumDisplayName.Test/EnumDisplayName.Test.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp2.0;net452</TargetFrameworks>
     <RootNamespace>Enable.EnumDisplayName</RootNamespace>
+    <CodeAnalysisRuleSet>../../CustomExtendedCorrectnessRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
